--- a/doc/bib/biblio.bib
+++ b/doc/bib/biblio.bib
@@ -71,3 +71,29 @@
 	doi 			= {https://doi.org/10.1006/inco.1994.1037},
 	author 			= {D. Kozen},
 }
+
+@article{hughes:2004,
+title = {Simulations in coalgebra},
+journal = {Theoretical Computer Science},
+volume = {327},
+number = {1},
+pages = {71-108},
+year = {2004},
+note = {Selected Papers of CMCS '03},
+issn = {0304-3975},
+doi = {https://doi.org/10.1016/j.tcs.2004.07.022},
+author = {Jesse Hughes and Bart Jacobs},
+}
+
+@inproceedings{katsumata:2013,
+	author = {Shin-ya Katsumata and Tetsuya Sato},
+	title = {Preorders on Monads and Coalgebraic Simulations},
+	year = {2013},
+	isbn = {9783642370748},
+	publisher = {Springer-Verlag},
+	address = {Berlin, Heidelberg},
+	doi = {10.1007/978-3-642-37075-5_10},
+	pages = {145–160},
+	location = {Rome, Italy},
+	series = {FOSSACS'13}
+}
